kubernetes/deployments/core/minio-tenant/minio-tenant/tenant/ingress.yaml
# yaml-language-server builtin
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tenant-ingress
  namespace: minio-tenant
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    nginx.ingress.kubernetes.io/proxy-body-size: 5t
spec:
  ingressClassName: external
  rules:
  - host: minio.${SECRET_DOMAIN}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: minio
            port:
              number: 80
  - host: console.${SECRET_DOMAIN}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: minio-console
            port:
              number: 9090
  tls:
  - hosts:
    - minio.${SECRET_DOMAIN}
    - console.${SECRET_DOMAIN}
